--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
@@ -55,6 +55,13 @@
         }
 
         let time = new Date();
+        if (time - lastMessageTime > 500) {
+          message = "------------------------------\n" + message;
+        }
+
+        const text = document.getElementById("text");
+        text.value += message + "\n";
+        text.scrollTop = text.scrollHeight;
       }
 
       function clearText() {
