Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
@@ -62,6 +62,8 @@
         const text = document.getElementById("text");
         text.value += message + "\n";
         text.scrollTop = text.scrollHeight;
+
+        lastMessageTime = time;
       }
 
       function clearText() {
