Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
@@ -36,7 +36,7 @@
 
     <script>
       const parent = document.getElementById("parent");
-      parent.onmouseover = parent.onmouseout = function(e) {
+      parent.onmouseover = parent.onmouseout = parent.onmousemove = function(e) {
         let type = e.type;
         while(type.length < 11) {
           type += " ";
