--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <style>
-      
+      body {
+        margin: 0;
+        font-family:Arial, Helvetica, sans-serif;
+      }
     </style>
   </head>
   <body>
+    <h1>Ola, tudo bem?</h1>
     <script>
       console.log("Ola, tudo bem?");
     </script>
