--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
@@ -66,7 +66,8 @@
       }
 
       function log(message) {
-        console.log(message);
+        textarea.value += message + "\n";
+        textarea.scrollTop = textarea.scrollHeight;
       }
     </script>
   </body>
