--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
@@ -69,6 +69,10 @@
         textarea.value += message + "\n";
         textarea.scrollTop = textarea.scrollHeight;
       }
+
+      button.onclick = function() {
+        textarea.value = "";
+      }
     </script>
   </body>
 </html>
