--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/tasks/index.html
@@ -34,6 +34,9 @@
         margin-top: 20px;
         width: 300px;
         height: 150px;
+        border: 4px solid #BAE0BA;
+        border-radius: 4px;
+        padding: 6px;
       }
 
       button {
@@ -66,8 +69,19 @@
 
       let lastMessage = "";
       let counter = 1;
+      let lastTime = 0;
 
       function log(message, type) {
+        if (lastTime === 0) {
+          lastTime = new Date();
+        }
+
+        const time = new Date();
+
+        if (time - lastTime > 500) {
+          message = "------------------------------\n" + message;
+        }
+
         if (lastMessage === message) {
           counter++;
           const index = textarea.value.lastIndexOf(type);
@@ -75,12 +89,12 @@
           textarea.value = text + message + " x" + counter + "\n";
         } else {
           counter = 1;
-          console.log("Diferente");
           textarea.value += message + "\n";
         }
 
         textarea.scrollTop = textarea.scrollHeight;
         lastMessage = message;
+        lastTime = time;
       }
 
       document.querySelector("button").onclick = function() {
