--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
@@ -2,10 +2,61 @@
 <html>
   <head>
     <style>
+      body {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: Arial, Helvetica, sans-serif;
+      }
 
+      #parent {
+        background-color: lightpink;
+        width: 200px;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+
+      }
+
+      #child {
+        background-color: lightgreen;
+        width: 100px;
+        height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      textarea {
+        margin-top: 20px;
+        width: 300px;
+        height: 150px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 6px;
+        outline: none;
+      }
+
+      textarea:focus {
+        border: 4px solid #BAE0BA;
+      }
+
+      button {
+        margin-top: 10px;
+      }
     </style>
   </head>
   <body>
+    <div id="parent">
+      Parent
+      <div id="child">
+        Child
+      </div>
+    </div>
+    <textarea></textarea>
     <script>
       console.log("Ola, tudo bem?");
     </script>
