--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/skipping-elements.html
@@ -41,7 +41,8 @@
       }
 
       textarea:focus {
-        border: 4px solid #BAE0BA;
+        border: 1px solid #BAE0BA;
+        box-shadow: 0 0 0 0.25rem #BAE0BA;
       }
 
       button {
@@ -57,8 +58,14 @@
       </div>
     </div>
     <textarea></textarea>
+    <button>Clear</button>
+
     <script>
-      console.log("Ola, tudo bem?");
+      const textarea = document.querySelector("textarea");
+      document.querySelector("button").onclick = function() {
+        textarea.value = "";
+        textarea.focus();
+      }
     </script>
   </body>
 </html>
