Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -63,6 +63,13 @@
     </div>
 
     <script>
+      const parent = document.getElementById("parent");
+      const child = parent.firstElementChild;
+
+      parent.onmouseover = parent.onmouseout = child.onmouseover = function(e) {
+        console.log(e.target.id, e.type);
+      }
+
       const container = document.getElementById("container");
       let i = 1;
       container.childNodes.forEach(function(node) {
