Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/mouseout-when-leaving-for-a-child.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/mouseout-when-leaving-for-a-child.html
@@ -58,7 +58,12 @@
     <button>Clear</button>
 
     <script>
-      console.log("Ola, tudo bem?");
+      const textarea = document.querySelector("textarea");
+
+      document.querySelector("button").onclick = function() {
+        textarea.value = "";
+        textarea.focus();
+      }
     </script>
   </body>
 </html>
