Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -62,6 +62,8 @@
       <div id="child"></div>
     </div>
 
+    <h3>Events mouseenter and mouseleave</h3>
+
     <script>
       const parent = document.getElementById("parent");
       const child = parent.firstElementChild;
