--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -27,7 +27,7 @@
         background-color: antiquewhite;
       }
 
-      #parent {
+      #parent, #parent-2 {
         width: 200px;
         height: 150px;
         background-color: lightcoral;
@@ -36,7 +36,7 @@
         align-items: center;
       }
 
-      #child {
+      #child, #child-2 {
         width: 100px;
         height: 75px;
         background-color: aliceblue;
@@ -58,11 +58,14 @@
     </div>
 
     <h3>Mouseout when leaving for a child</h3>
-    <div id="parent">
-      <div id="child"></div>
+    <div id="parent-2">
+      <div id="child-2"></div>
     </div>
 
     <h3>Events mouseenter and mouseleave</h3>
+    <div id="parent">
+      <div id="child"></div>
+    </div>
 
     <script>
       const parent = document.getElementById("parent");
