--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -58,16 +58,27 @@
     </div>
 
     <h3>Mouseout when leaving for a child</h3>
-    <div id="parent-2">
-      <div id="child-2"></div>
-    </div>
-
-    <h3>Events mouseenter and mouseleave</h3>
     <div id="parent">
       <div id="child"></div>
     </div>
 
+    <h3>Events mouseenter and mouseleave</h3>
+    <div id="parent-2">
+      <div id="child-2"></div>
+    </div>
+
     <script>
+      const parent2 = document.getElementById("parent-2");
+      parent2.onmouseenter = parent2.onmouseleave = function(e) {
+        console.log(e.type);
+      }
+
+      // const child2 = parent2.firstElementChild;
+      // child2.onmouseenter = child2.onmouseleave = function(e) {
+      //   console.log(e.target.id, e.type);
+      // }
+
+
       const parent = document.getElementById("parent");
       const child = parent.firstElementChild;
 
