Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/events-mouseenter-and-mouseleave.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/events-mouseenter-and-mouseleave.html
@@ -54,5 +54,17 @@
     <div id="parent">
       <div id="child"></div>
     </div>
+    <textarea></textarea>
+    <button>Clear</button>
+
+    <script>
+      const parent = document.getElementById("parent");
+      const textarea = document.querySelector("textarea");
+
+      document.querySelector("button").onclick = function() {
+        textarea.value = "";
+        textarea.focus();
+      }
+    </script>
   </body>
 </html>
