Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/index.html
@@ -72,6 +72,8 @@
       <div id="child-2"></div>
     </div>
 
+    <h3>Event delegation</h3>
+
     <script>
       const parent2 = document.getElementById("parent-2");
       parent2.onmouseenter = parent2.onmouseleave = function(e) {
