--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -6,6 +6,20 @@
     </style>
   </head>
   <body>
+    <table>
+
+    </table>
+      <tr>
+        <th colspan="3"><em>Bagua</em>  Chart: Direction, Element, Color, Meaning</th>
+      </tr>
+      <tr>
+        <td class="nw">
+          <strong>Northwest</strong>
+          <br>Metal
+          <br>Silver
+          <br>Elders
+        </td>
+      </tr>
     <script>
       console.log("Ola, tudo bem?");
     </script>
