Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -64,6 +64,10 @@
       </tr>
     </table>
 
+    <textarea></textarea>
+
+    <button>Clear</button>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
