Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <style>
+      textarea {
+        display: block;
+        height: 100px;
+        width: 456px;
+        outline: none;
+        border: 1px solid #aaa;
+      }
 
+      textarea:focus {
+        border: 1px solid #BAE0BA;
+        box-shadow: 0 0 0 0.25rem #BAE0BA;
+      }
     </style>
   </head>
   <body>
