--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -14,6 +14,21 @@
         border: 1px solid #BAE0BA;
         box-shadow: 0 0 0 0.25rem #BAE0BA;
       }
+
+      table th {
+        text-align: center;
+        font-weight: bold;
+      }
+
+      table td {
+        width: 150px;
+        white-space: nowrap;
+        text-align: center;
+        vertical-align: bottom;
+        padding-top: 5px;
+        padding-bottom: 12px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
