Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -8,6 +8,7 @@
         width: 456px;
         outline: none;
         border: 1px solid #aaa;
+        margin-top: 20px;
       }
 
       textarea:focus {
@@ -28,6 +29,52 @@
         padding-top: 5px;
         padding-bottom: 12px;
         cursor: pointer;
+      }
+
+      table .nw {
+        background: #999;
+      }
+
+      table .n {
+        background: #03f;
+        color: #fff;
+      }
+
+      table .ne {
+        background: #ff6;
+      }
+
+      table .w {
+        background: #ff0;
+      }
+
+      table .c {
+        background: #60c;
+        color: #fff;
+      }
+
+      table .e {
+        background: #09f;
+        color: #fff;
+      }
+
+      table .sw {
+        background: #963;
+        color: #fff;
+      }
+
+      table .s {
+        background: #f60;
+        color: #fff;
+      }
+
+      table .se {
+        background: #0c3;
+        color: #fff;
+      }
+
+      button {
+        margin-top: 10px;
       }
     </style>
   </head>
