Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -73,6 +73,10 @@
         color: #fff;
       }
 
+      table .highlight {
+        background: red;
+      }
+
       button {
         margin-top: 10px;
       }
