Moving the mouse: mouseover/out, mouseenter/leave

--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation.html
@@ -146,6 +146,15 @@
     <button>Clear</button>
 
     <script>
+      const table = document.querySelector("table");
+      table.onmouseover = table.onmouseout = function(e) {
+        if (e.type === "mouseover") {
+          e.target.style.backgroundColor = "pink";
+        } else {
+          e.target.style.backgroundColor = "";
+        }
+      }
+
       const textarea = document.querySelector("textarea");
 
       document.querySelector("button").onclick = function() {
