--- a/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation-improved.html
+++ b/part-2-browser-document-events-interfaces/ui-events/moving-the-mouse-mouseover-out-mouseenter-leave/event-delegation-improved.html
@@ -170,6 +170,28 @@
         onEnter(currentElem);
       }
 
+      table.onmouseout = function(e) {
+        // if we're outside of any <td> now, then ignore the event
+        // that's probably a move inside the table, but out of <td>,
+        // e.g. from <tr> to another <tr>
+        if (!currentElem) return;
+
+        // we're leaving the element – where to? Maybe to a descendant?
+        let relatedTarget = e.relatedTarget;
+
+        while (relatedTarget) {
+          // go up the parent chain and check – if we're still inside currentElem
+          // then that's an internal transition – ignore it
+          if (relatedTarget === currentElem) return;
+
+          relatedTarget = relatedTarget.parentNode;
+        }
+
+        // we left the <td>. really.
+        onLeave(currentElem);
+        currentElem = null;
+      }
+
       // any functions to handle entering/leaving an element
       function onEnter(elem) {
         elem.style.backgroundColor = "pink";
