--- a/part-3-react/index.html
+++ b/part-3-react/index.html
@@ -14,6 +14,12 @@
       const headerContent = document.createTextNode(
         "Develop. Preview. Ship. 🚀"
       );
+
+      // Append the text to the H1 element
+      header.append(headerContent);
+
+      // Place the H1 element inside the div
+      app.append(header);
     </script>
   </body>
 </html>
